--- a/missing-luggage.html
+++ b/missing-luggage.html
@@ -16,7 +16,7 @@
     }
 
     .card {
-      max-width: 480px;
+      max-width: 520px;
       margin: auto;
       background: #ffffff;
       padding: 24px;
@@ -26,7 +26,7 @@
 
     .top {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
     }
 
     /* 🧳 BIG CENTER ICON */
@@ -39,7 +39,7 @@
 
     .title {
       font-size: 30px;
-      font-weight: 800;
+      font-weight: 900;
       color: #0d47a1;
       margin: 0;
     }
@@ -52,39 +52,77 @@
 
     /* Main message */
     .notice {
-      margin: 18px 0 22px;
+      margin: 18px 0 18px;
       padding: 16px 18px;
       border-radius: 14px;
       background: #f0f7ff;
       border-left: 6px solid #1976d2;
       font-size: 18px;
-      font-weight: 700;
+      font-weight: 750;
       line-height: 1.5;
       text-align: left;
       color: #0d47a1;
     }
 
-    .notice p {
-      margin: 0;
+    .notice p { margin: 0; }
+    .notice p + p { margin-top: 10px; }
+
+    /* Contact info box */
+    .contact-box {
+      margin: 14px 0 18px;
+      padding: 14px 16px;
+      border-radius: 14px;
+      background: #fafafa;
+      border: 1px solid #e6e6e6;
+      text-align: left;
     }
 
-    .notice p + p {
-      margin-top: 10px;
+    .contact-row {
+      display: flex;
+      gap: 10px;
+      align-items: flex-start;
+      margin: 10px 0;
+      font-size: 15px;
+      color: #333;
+      word-break: break-word;
+    }
+
+    .cicon {
+      width: 30px;
+      height: 30px;
+      border-radius: 10px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: #e3f2fd;
+      color: #0d47a1;
+      flex: 0 0 auto;
+      font-size: 16px;
+    }
+
+    .cicon.email {
+      background: #ede7f6;
+      color: #6a1b9a;
+    }
+
+    .contact-label {
+      font-weight: 900;
+      margin-right: 6px;
     }
 
     .btn-row {
       display: flex;
       gap: 10px;
       flex-wrap: wrap;
-      margin-top: 12px;
+      margin-top: 10px;
     }
 
     a.btn {
-      flex: 1 1 140px;
+      flex: 1 1 150px;
       padding: 14px;
       border-radius: 16px;
       font-size: 16px;
-      font-weight: 800;
+      font-weight: 900;
       text-decoration: none;
       color: white;
       text-align: center;
@@ -115,6 +153,15 @@
         border-left-color: #90caf9;
         color: #cfe3ff;
       }
+
+      .contact-box {
+        background: #2a2a2a;
+        border-color: #333;
+      }
+
+      .contact-row { color: #eee; }
+      .cicon { background: #2f4a66; color: #90caf9; }
+      .cicon.email { background: #3a2a4a; color: #e1bee7; }
     }
   </style>
 </head>
@@ -141,5 +188,45 @@
       <p>If you found it, I would really appreciate your help in contacting me.</p>
     </div>
 
+    <!-- ✅ Contact information (visible) -->
+    <div class="contact-box">
+      <div class="contact-row">
+        <span class="cicon">📞</span>
+        <div>
+          <span class="contact-label">Phone:</span>
+          +1 (602) 814-1450
+        </div>
+      </div>
+
+      <div class="contact-row">
+        <span class="cicon email">✉️</span>
+        <div>
+          <span class="contact-label">Email:</span>
+          yiwawang@gmail.com
+        </div>
+      </div>
+    </div>
+
+    <!-- Action buttons -->
     <div class="btn-row">
-      <a class=
+      <a class="btn call" href="tel:16028141450">📞 Call</a>
+
+      <a class="btn sms"
+         href="sms:16028141450?body=Hello%2C%20I%20found%20your%20luggage.%20Please%20contact%20me.%20Thank%20you.">
+        💬 Text
+      </a>
+
+      <a class="btn mail"
+         href="mailto:yiwawang@gmail.com?subject=Found%20your%20luggage&body=Hello%2C%0A%0AI%20found%20your%20luggage.%20Please%20contact%20me.%0A%0AThank%20you.">
+        ✉️ Email
+      </a>
+    </div>
+
+    <div class="note">
+      If it’s more convenient, please keep the luggage safe and contact me when you can.<br>
+      Thank you very much for your kindness.
+    </div>
+
+  </div>
+</body>
+</html>
