--- a/missing-luggage.html
+++ b/missing-luggage.html
@@ -29,7 +29,7 @@
       margin-bottom: 18px;
     }
 
-    /* 🧳 BIG CENTER ICON */
+    /* 🧳 Cute luggage icon */
     .icon {
       width: 120px;
       height: 120px;
@@ -50,7 +50,6 @@
       margin-top: 6px;
     }
 
-    /* Main message */
     .notice {
       margin: 18px 0 18px;
       padding: 16px 18px;
@@ -67,7 +66,6 @@
     .notice p { margin: 0; }
     .notice p + p { margin-top: 10px; }
 
-    /* Contact info box */
     .contact-box {
       margin: 14px 0 18px;
       padding: 14px 16px;
@@ -140,7 +138,6 @@
       text-align: left;
     }
 
-    /* 🌙 Dark mode */
     @media (prefers-color-scheme: dark) {
       body { background: #121212; color: #f0f0f0; }
       .card { background: #1e1e1e; }
@@ -170,13 +167,31 @@
   <div class="card">
 
     <div class="top">
-      <!-- 🧳 Centered large luggage icon -->
-      <svg class="icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" aria-label="Missing Luggage">
-        <rect x="30" y="16" width="40" height="14" rx="7" fill="#555"/>
-        <rect x="22" y="30" width="56" height="58" rx="14" fill="#90caf9"/>
-        <rect x="46" y="30" width="8" height="58" fill="#64b5f6"/>
-        <circle cx="34" cy="92" r="4" fill="#555"/>
-        <circle cx="66" cy="92" r="4" fill="#555"/>
+      <!-- 💛 Cute luggage with heart -->
+      <svg class="icon" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" aria-label="Missing Luggage">
+        <!-- background circle -->
+        <circle cx="60" cy="60" r="56" fill="#fff3f0"/>
+        <circle cx="60" cy="60" r="56" fill="none" stroke="#f3c5bf" stroke-width="3"/>
+
+        <!-- handle -->
+        <rect x="42" y="22" width="36" height="12" rx="6" fill="#6d6d6d"/>
+        <rect x="46" y="26" width="28" height="6" rx="3" fill="#8a8a8a"/>
+
+        <!-- suitcase body -->
+        <rect x="34" y="36" width="52" height="56" rx="14" fill="#f5b041"/>
+        <rect x="58" y="36" width="4" height="56" fill="#e59866"/>
+
+        <!-- wheels -->
+        <circle cx="44" cy="96" r="5" fill="#6d6d6d"/>
+        <circle cx="76" cy="96" r="5" fill="#6d6d6d"/>
+
+        <!-- heart -->
+        <path d="M78 46
+                 c-4-6-14-4-14 4
+                 c0 6 14 14 14 14
+                 s14-8 14-14
+                 c0-8-10-10-14-4z"
+              fill="#e74c3c"/>
       </svg>
 
       <h1 class="title">Missing Luggage</h1>
@@ -188,7 +203,6 @@
       <p>If you found it, I would really appreciate your help in contacting me.</p>
     </div>
 
-    <!-- ✅ Contact information (visible) -->
     <div class="contact-box">
       <div class="contact-row">
         <span class="cicon">📞</span>
@@ -207,7 +221,6 @@
       </div>
     </div>
 
-    <!-- Action buttons -->
     <div class="btn-row">
       <a class="btn call" href="tel:16028141450">📞 Call</a>
 
