--- a/final/gy.html
+++ b/final/gy.html
@@ -190,7 +190,7 @@
 
     <div class="item">
       <span class="icon email">✉️</span>
-      bellona@gmail.com
+      bellona.ge@gmail.com
     </div>
 
     <a class="button call" href="tel:14802467142">📞 Call Parent</a>
@@ -201,7 +201,7 @@
     </a>
 
     <a class="button mail"
-       href="mailto:bellona@gmail.com?subject=Child%20Emergency%20Contact">
+       href="mailto:bellona.ge@gmail.com?subject=Child%20Emergency%20Contact">
        ✉️ Email Parent
     </a>
 
